--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "codeigniter4/framework": "^4.0",
+    "dompdf/dompdf": "dev-master",
     "myth/auth": "dev-develop"
   },
   "require-dev": {
